Fix bug hero image vertical space bug
At sufficiently small sizes, hero image would cut off before the
right side

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ body {
 .left-hero {
     flex: 1;
     box-sizing: border-box;
-    height: max(400px, 100vh);
+    height: max(530px, 100vh);
     background: url("../images/forest-mountain.jpg") no-repeat;
     background-size: cover;
     display: relative;
@@ -124,7 +124,7 @@ body {
 
 .hero-content {
     width: 100%;
-    height: 100%;
+    height: auto;
     background-color: rgba(0, 0, 0, 0.2);
     flex-direction: row;
     align-items: center;
